second attempt at fixing horizontal overflow bug in the mobile version

--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,7 @@ nav li a{
 
 .root{
   width:100vw;
+  position:fixed;
 }
 
 .container{
